--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,900");
 @import url("fontawesome-all.min.css");
 
-/*
-	Big Picture by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
@@ -504,7 +499,7 @@ input, select, textarea {
 		font-weight: 300;
 		font-size: 18pt;
 		line-height: 1.75em;
-		color: #39454b;
+		color: #101D18;
 		letter-spacing: 0.025em;
 	}
 
@@ -588,7 +583,7 @@ input, select, textarea {
 		-webkit-transition: color 0.2s ease-in-out;
 		-ms-transition: color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out;
-		color: #98c593;
+		color: #101D18;
 	}
 
 	sub {
@@ -622,7 +617,7 @@ input, select, textarea {
 
 	.box {
 		background: #ffffff;
-		color: #39454b;
+		color: #101D18;
 		padding: 2em;
 	}
 
@@ -662,7 +657,7 @@ input, select, textarea {
 		-webkit-transition: background-color 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out;
-		background-color: #98c593;
+		background-color: #101D18;
 		border: 0;
 		border-radius: 3.5em;
 		color: #ffffff;
@@ -719,7 +714,7 @@ input, select, textarea {
 		input[type="reset"]:hover,
 		.button:hover,
 		button:hover {
-			background-color: #a8cea4;
+			background-color: #3E7661;
 		}
 
 		input[type="button"]:active,
@@ -727,7 +722,7 @@ input, select, textarea {
 		input[type="reset"]:active,
 		.button:active,
 		button:active {
-			background-color: #88bc82;
+			background-color: #6DCFA9;
 		}
 
 		input[type="button"].style2,
@@ -736,7 +731,7 @@ input, select, textarea {
 		.button.style2,
 		button.style2 {
 			background-color: transparent;
-			border: solid 2px #e5e6e7;
+			border: solid 2px #1F3B30;
 			color: inherit;
 		}
 
@@ -858,12 +853,12 @@ input, select, textarea {
 		-webkit-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		-ms-transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		color: #39454b;
+		color: #2F5848;
 		display: block;
 		width: 100%;
 		padding: 0.65em 0.75em;
 		background: none;
-		border: solid 2px #e5e6e7;
+		border: solid 2px #2F5848;
 		color: inherit;
 		border-radius: 0.5em;
 		outline: none;
@@ -877,7 +872,7 @@ input, select, textarea {
 		input[type="url"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #9ac8e9;
+			border-color: #2F5848;
 		}
 
 	input[type="text"],
@@ -1220,7 +1215,7 @@ input, select, textarea {
 
 			table.default thead {
 				background: #39454b;
-				color: #ffffff;
+				color: #2F5848;
 			}
 
 			table.default tfoot {
@@ -1444,7 +1439,7 @@ input, select, textarea {
 			width: 50%;
 			position: relative;
 			opacity: 1.0;
-		}
+		} 
 
 			.gallery article .image {
 				margin: 0;
@@ -2244,7 +2239,7 @@ input, select, textarea {
 /* Intro */
 
 	#intro {
-		background: url("images/overlay.png"), url("../../images/intro.jpg");
+		background: url("images/overlay.png"), url("../../images/intro4.jpg");
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, bottom center;
@@ -2254,7 +2249,7 @@ input, select, textarea {
 /* One */
 
 	#one {
-		background: url("images/overlay.png"), url("../../images/one.jpg");
+		background: url("images/overlay.png"), url("../../images/one.png");
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
@@ -2263,11 +2258,21 @@ input, select, textarea {
 /* Two */
 
 	#two {
-		background: url("images/overlay.png"), url("../../images/two.jpg");
+		background: url("images/overlay.png"), url("../../images/two.png");
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
 	}
+
+	.fcc-btn {
+		background-color: #94BFDC ;
+		font-family: 'courier new';
+		color: white;
+		border: none;
+		border-radius: 0.25em;
+		padding: 0.5em 1em;
+		cursor: pointer;
+	  }
 
 /* Contact */
 
@@ -2310,3 +2315,4 @@ input, select, textarea {
 			}
 
 		}
+
